<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="visibility">Visibility</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="discover_weather" translatable="false">Discover Weather</string>
    <string name="track_the_weather_wherever_you_are" translatable="false">Track the weather wherever you are</string>
    <string name="in_your_city" translatable="false">in Your City</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="notification">Notification</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="alarm">Alarm</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="allow">Allow</string>
    <string name="weather_tracker">Weather Tracker</string>
    <string name="weather_description">weather description</string>
    <string name="weather">Weather</string>
    <string name="dismiss">Dismiss</string>
    <string name="initial_settings">initial settings</string>
    <string name="ok">Ok</string>
    <string name="we_can_t_fetch_your_location">We Can’t fetch your location</string>
    <string name="please_allow_weather_to_access_your_location">Please allow Weather to access your location</string>
    <string name="m_s">m/s</string>
    <string name="c" translatable="false">°C</string>
    <string name="no_places">No Places</string>
    <string name="no_alerts">No Alerts</string>
    <string name="save">save</string>
    <string name="mile">m/h</string>
    <string name="notification_disable">Notification Disabled</string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="Save">Save</string>
    <string name="no">No</string>
    <string name="f" translatable="false">°F</string>
    <string name="k" translatable="false">°K</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="alarms">Alarms</string>
    <string name="end_time">end time</string>
    <string name="end_date">end date</string>
    <string name="start_time">start time</string>
    <string name="start_date">start date</string>
    <string name="no_network_connection">" No Network Connection "</string>
    <string name="celisus">°C</string>
    <string name="display_on_apps">Display On Other Apps</string>
    <string name="app_name">Weather Tracker</string>
    <string name="cancel">Cancel</string>
    <string name="beautiful_weather">The Beautiful Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>