<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/alarmFragment"
        android:name="com.example.weathertracker.alarm.view.AlarmFragment"
        android:label="@string/alarms"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weathertracker.favorite.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weathertracker.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weathertracker.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>