<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/location"
                app:layout_constraintEnd_toStartOf="@+id/language"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loc_constraint"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/location"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location">

                <RadioGroup

                    android:padding="10dp"
                    android:id="@+id/loc_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/gps_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/gps"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/map_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/map"
                        app:layout_constraintTop_toBottomOf="@id/gps_radio_btn" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/language"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lang_constraint"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/language"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/language"
                app:layout_constraintTop_toBottomOf="@+id/language">

                <RadioGroup
                    android:padding="10dp"
                    android:id="@+id/lang_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/english_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/english"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/arabicRadioBtn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/arabic"
                        app:layout_constraintTop_toBottomOf="@id/english_radio_btn" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/temperature"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/temperature"
                app:layout_constraintEnd_toStartOf="@+id/wind_speed"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loc_constraint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/temp_constraint"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/temperature"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/temperature"
                app:layout_constraintTop_toBottomOf="@+id/temperature">

                <RadioGroup
                    android:padding="10dp"
                    android:id="@+id/temp_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/celsius_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/celsius"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/kelvin_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/kelvin"
                        app:layout_constraintTop_toBottomOf="@id/celsius_radio_btn" />

                    <RadioButton
                        android:id="@+id/fahren_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/fahrenheit"
                        app:layout_constraintTop_toBottomOf="@id/kelvin_radio_btn" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/wind_speed"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/wind_speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/temperature"
                app:layout_constraintTop_toBottomOf="@id/lang_constraint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wind_constraint"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/wind_speed"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/wind_speed"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed">

                <RadioGroup
                    android:padding="10dp"
                    android:id="@+id/wind_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/meter_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/meter_sec"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/mile_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/mile_hour"
                        app:layout_constraintTop_toBottomOf="@id/meter_radio_btn" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/notification"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.107"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temp_constraint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginBottom="75dp"
                android:id="@+id/notf_constraint"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/notification"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/notification"
                app:layout_constraintTop_toBottomOf="@+id/notification">

                <RadioGroup
                    android:padding="10dp"
                    android:id="@+id/notf_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/enable_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"

                        android:text="@string/enable"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/disable_radio_btn"
                        style="@style/settingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/disable"

                        app:layout_constraintTop_toBottomOf="@id/enable_radio_btn" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>