<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#6FD2D2D2"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/location_confirm_dialog"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textColor="@color/endColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address_confirm_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            android:textColor="@color/endColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/location_confirm_dialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/location_confirm_dialog"
            app:layout_constraintTop_toBottomOf="@id/location_confirm_dialog" />

        <com.google.android.material.button.MaterialButton
            android:theme="@style/Theme.MaterialComponents.Light"
            android:id="@+id/save_btn_confirm_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:rippleColor="@color/green"
            android:text="@string/save"
            app:cornerRadius="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_confirm_dialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>