<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        tools:context=".dialogs.AlertDialogFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6AD2D2D2">

            <TextView
                android:id="@+id/from"
                style="@style/text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/from"
                app:layout_constraintEnd_toStartOf="@+id/to"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/from_constraint"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/from"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/from"
                app:layout_constraintTop_toBottomOf="@+id/from">

                <TextView
                    android:id="@+id/start_time"
                    style="@style/settingsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="11:22 AM"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/start_day"
                    style="@style/settingsText"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="26 Feb,2021"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/start_time" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/to"
                style="@style/text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/gradient_text"
                android:gravity="center"
                android:text="@string/to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/from"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/to_constraint"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background"
                android:backgroundTint="#C8C7C7"
                app:layout_constraintEnd_toEndOf="@+id/to"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/to"
                app:layout_constraintTop_toBottomOf="@+id/to">

                <TextView
                    android:id="@+id/end_time"
                    style="@style/settingsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="11:22 AM"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/end_day"
                    style="@style/settingsText"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="26 Feb,2021"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/end_time" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <RadioGroup
                android:id="@+id/lang_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/to_constraint"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/from_constraint"
                app:layout_constraintTop_toBottomOf="@+id/to_constraint">

                <RadioButton
                    android:id="@+id/alarm_radio_btn"
                    style="@style/settingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="@string/alarm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/notification_radio_btn"
                    style="@style/settingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    app:layout_constraintTop_toBottomOf="@id/alarm_radio_btn" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_alert_dialog"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/add"
                android:textColor="@color/white"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/centerColor"
                app:layout_constraintEnd_toEndOf="@+id/lang_radioGroup"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/lang_radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/lang_radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>

